--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
             "email": "raymond@hostlink.com.hk"
         }
     ],
+    "require": {
+        "php": ">=5.6"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
     }
