--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
+    },
+    "scripts": {
+        "test": "phpunit tests"
     }
 }
